UtahLiveDataTest/src/objects/r_pcat__c.object
<CustomObject>
    <fields>
        <fullName>ACT_FL__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Active</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALW_BUD_FL__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Budgeting</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EFBGN_DT__c</fullName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalFINETId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>PCAT_CD</description>
        <externalId>true</externalId>
        <label>ExternalFINETId</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PCAT_CD__c</fullName>
        <label>Program Category Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCAT_DSCR__c</fullName>
        <label>Program Category Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCAT_NM__c</fullName>
        <label>Program Category Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCAT_SH_NM__c</fullName>
        <label>Program Category Short Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>FINET Program Category</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Program Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FINET Program Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>